# nobug

./: README.md  pyproject.toml  todo.md
examples/: MyClass.py  demo.py
nobug/: __init__.py  __main__.py  ipc.py
nobug/engine/: __init__.py  breakpoints.py  commands.py  session.py  state.py  tracer.py  venv.py  watches.py
nobug/engine/exprstep/: __init__.py  cheap.py  instrument.py
nobug/ui/: __init__.py  app.py  keys.py  widgets.py
