[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nobug"
version = "0.1.0"
description = "A TUI debugger for Python — pdb control with Thonny-style expression resolution."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=0.60",
    "rich>=13.0",
    "pygments>=2.0",
]

[project.scripts]
nobug = "nobug.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nobug*"]
